add api for user-service, implement inmemory store
